# komikku

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Komikku.doap  Makefile  README.md  meson.build  meson_options.txt  pylintrc  requirements-dev.txt  requirements.txt  setup.cfg  sonar-project.properties
.gear/: komikku.spec  rules
.gear/tags/: list
.gear/upstream/: make_valid_tags  remotes
.gitea/issue_template/: bug.md
.gitlab/issue_templates/: bug.md
data/: info.febvre.Komikku.appdata.xml.in  info.febvre.Komikku.appdata.xml.in.in  info.febvre.Komikku.desktop.in  info.febvre.Komikku.gresource.xml  info.febvre.Komikku.gschema.xml.in  meson.build
data/css/: style.css
data/icons/: meson.build
data/ui/: about_dialog.ui.in  about_window.ui.in  application_window.blp  application_window.ui  card.blp  card.ui  card_chapters_list_row.blp  card_chapters_list_row.ui  categories_editor.blp  categories_editor.ui  download_manager.blp  download_manager.ui  explorer.ui  explorer_search.blp  explorer_search.ui  explorer_servers.blp  explorer_servers.ui  history.blp  history.ui  library.blp  library.ui  meson.build  preferences.blp  preferences.ui  preferences_servers_languages.blp  preferences_servers_languages.ui  preferences_servers_settings.blp  preferences_servers_settings.ui  reader.blp  reader.ui  shortcuts_overview.blp  shortcuts_overview.ui  support.blp  webview.blp  webview.ui
data/ui/menu/: card.xml  card_selection_mode.xml  download_manager.xml  download_manager_selection_mode.xml  explorer_search_global_search.xml  library_search.xml  library_selection_mode.xml  main.xml  reader.xml
flatpak/: README.md  info.febvre.Komikku-gtk4.json  info.febvre.Komikku.Devel.json  info.febvre.Komikku.json  info.febvre.KomikkuDevel.json  python3-beautifulsoup4.json  python3-brotli.json  python3-cffi.json  python3-cloudscraper.json  python3-cryptography-cargo-deps.json  python3-dateparser.json  python3-emoji.json  python3-file-magic.json  python3-natsort.json  python3-pillow.json  python3-pure-protobuf.json  python3-rarfile.json  python3-unidecode.json
komikku/: activity_indicator.py  application.py  card.py  categories_editor.py  debug_info.py  downloader.py  explorer.py  history.py  library.py  preferences.py  support.py  updater.py  utils.py  webview.py
komikku/card/: __init__.py  categories_list.py  chapters_list.py
komikku/explorer/: __init__.py  card.py  common.py  search.py  servers.py
komikku/models/: __init__.py  database.py  keyring.py  settings.py
komikku/reader/: __init__.py  controls.py
komikku/servers/: __init__.py  exceptions.py  headless_browser.py  loader.py  utils.py
po/: LINGUAS  POTFILES.in  ar.po  ca.po  de.po  es.po  fi.po  fr.po  id.po  it.po  komikku.pot  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  tr.po  uk.po  update_potfiles.sh  zh_CN.po  zh_Hant.po
tests/: README.md
tests/servers/: test_akumanga.py  test_apollcomics.py  test_aralosbd.py  test_araznovel.py  test_argosscan.py  test_asurascans.py  test_atikrost.py  test_bestmanga.py  test_bilibili.py  test_coloredcouncil.py  test_comicbookplus.py  test_dankefurslesen.py  test_dbmultiverse.py  test_desu.py  test_dynasty.py  test_flamescans.py  test_fmteam.py  test_frdashscan.py  (+70 more)
(+132 files in other folders)
